fixed a problem: aligned image on one line with links

--- a/style.css
+++ b/style.css
@@ -9,9 +9,8 @@ body {
   box-sizing: border-box;
 }
 .container {
-  max-width: 800px;
-  margin: 0 auto;
-  padding: 0.5rem;
+  max-width: 1378px;
+  margin: 0 auto; 
 }
 [class^="col"] {
   padding: 0 0.5rem;
@@ -66,6 +65,7 @@ nav {
 }
 .navbar ul {
   list-style-type: none;
+  display: flex;
 }
 .navbar ul li {
   display: inline-flex;
@@ -77,6 +77,7 @@ nav {
   text-decoration: none;
   color: #090909;
   padding: 1rem;
+  font-weight: 400;
 }
 .navbar ul img {
   padding-right: 1rem;
